--- a/src/app.html
+++ b/src/app.html
@@ -8,16 +8,21 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
-		<script src="https://unpkg.com/lenis@1.2.3/dist/lenis.min.js"></script>
 		<script>
-			window.lenis = new Lenis({
-				duration: 2,
-				easing: (t) => Math.min(1, 1.001 - Math.pow(2, -12 * t)),
-				normalizeWheel: true,
-				smoothTouch: false,
-				autoRaf: true,
-				autoResize: true
-			});
+			const script = document.createElement('script');
+			script.src = 'https://unpkg.com/lenis@1.2.3/dist/lenis.min.js';
+			script.defer = true;
+			script.onload = () => {
+				window.lenis = new Lenis({
+					duration: 2,
+					easing: (t) => Math.min(1, 1.001 - Math.pow(2, -12 * t)),
+					normalizeWheel: true,
+					smoothTouch: false,
+					autoRaf: true,
+					autoResize: true
+				});
+			};
+			document.head.appendChild(script);
 		</script>
 	</body>
 </html>
